# laby-cpp

lab01/: main.cpp
lab02/: CMakeLists.txt  main.cpp  obiekty.cpp  obiekty.h
lab03/: main.cpp  obiekty.cpp  obiekty.h
lab04/: CMakeLists.txt  Data.cpp  Data.h  Osoba.cpp  Osoba.h  Pojazd.cpp  Pojazd.h  PojazdOsobowy.cpp  PojazdOsobowy.h  PojazdSilnikowy.cpp  PojazdSilnikowy.h  Produkt.cpp  Produkt.h  Rower.cpp  Rower.h  Towar.cpp  Towar.h  TowarZKaucja.cpp  TowarZKaucja.h  Usluga.cpp  Usluga.h  main.cpp
lab05/: CMakeLists.txt  NodeBST.h  TreeBST.h  main.cpp
lab06/: CMakeLists.txt  Tree.h  main.cpp
